# dioxus-chessboard

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.config.js
example/: package.json  showcase.rs  tailwind.config.js
public/: chessboard.css  tailwind.css
public/css/: chessboard.css  input.css
src/: chessboard.rs  communication.rs  files.rs  historical_board.rs  lib.rs  move_builder.rs  piece.rs  pieces.rs  promotion.rs  ranks.rs  square.rs
src/chessboard/: action.rs  chessboard.rs  mod.rs  properties.rs  san_move.rs
src/history/: action.rs  board.rs  mod.rs
src/move_builder/: applicable_move.rs  mod.rs  promotion.rs  state.rs
