[package]
name = "dioxus-chessboard"
version = "0.1.6"
edition = "2021"
authors = [
    "Victor Ermolaev <victorermolaev@gmail.com>",
]
repository = "https://github.com/vnermolaev/dioxus-chessboard"
documentation = "https://docs.rs/dioxus-chessboard/"
license = "MIT OR Apache-2.0"
keywords = ["web", "doixus", "component", "chessboard"]
categories = ["gui", "wasm", "web-programming"]
description = "A chessboard component for Dioxus"
readme = "README.md"

[[example]]
name = "showcase"
path = "example/showcase.rs"

[dependencies]
dioxus = { version = "0.6.0", features = ["web"] }
dioxus-logger = "0.6.1"
tracing = "0.1.40"
owlchess = "0.4.0"
futures-util = { version = "0.3.30", optional = true }

[features]
showcase = ["futures-util"]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
